objects/SVMXC__Offline_Object__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to store configuration of objects and data sets associated with a ServiceMax Offline profile.</description>
    <fields>
        <fullName>SVMXC__Advanced_Archival_Criteria__c</fullName>
        <description>This is the advance criteria for Archival</description>
        <inlineHelpText>This is the advance criteria for Archival</inlineHelpText>
        <label>Advanced Archival Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Advanced_Download_Criteria__c</fullName>
        <description>This is the advance criteria for data download</description>
        <inlineHelpText>This is the advance criteria for data download</inlineHelpText>
        <label>Advanced Download Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Advanced_Lock_Criteria__c</fullName>
        <description>This is the advance criteria for data lock.</description>
        <inlineHelpText>This is the advance criteria for data lock.</inlineHelpText>
        <label>Advanced Lock Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Allow_API_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow API Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Allow_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the offline user can see Attachment for  the selected object</description>
        <inlineHelpText>Indicates if the offline user can see Attachment for  the selected object</inlineHelpText>
        <label>Allow Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Allow_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the offline user can see this object as a tab</description>
        <inlineHelpText>Indicates if the offline user can see this object as a tab</inlineHelpText>
        <label>Allow Tab In Offline?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Allow_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if any data created in this object in offline can be uploaded to online</description>
        <inlineHelpText>Indicates if any data created in this object in offline can be uploaded to online</inlineHelpText>
        <label>Allow Upload?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Allow_View_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the end user can override the default tab view in offline</description>
        <inlineHelpText>If the end user can override the default tab view in offline</inlineHelpText>
        <label>Allow Override of default view?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Archival_Criteria__c</fullName>
        <description>Offline query builder representation of criteria to automatically archive records from offline</description>
        <inlineHelpText>Offline query builder representation of criteria to automatically archive records from offline</inlineHelpText>
        <label>Archival Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Child_To_Parent_Field_Name__c</fullName>
        <description>For child objects, this has the API name of the field that connects it to its parent object.</description>
        <inlineHelpText>For child objects, this has the API name of the field that connects it to its parent object.</inlineHelpText>
        <label>Child To Parent Field Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Lock_Criteria__c</fullName>
        <description>Offline query builder representation of criteria to block editing of records in offline</description>
        <inlineHelpText>Offline query builder representation of criteria to block editing of records in offline</inlineHelpText>
        <label>Lock Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Object_Name__c</fullName>
        <description>API Name of the object enabled for offline</description>
        <inlineHelpText>API Name of the object enabled for offline</inlineHelpText>
        <label>Object Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Offline_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Offline Profile to which this object belongs</description>
        <inlineHelpText>Offline Profile to which this object belongs</inlineHelpText>
        <label>Offline Profile</label>
        <referenceTo>SVMXC__ServiceMax_Config_Data__c</referenceTo>
        <relationshipLabel>Datasets For This Profile</relationshipLabel>
        <relationshipName>Offline_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Offline_Query__c</fullName>
        <description>Representation of SOQL query in offline query builder tool</description>
        <inlineHelpText>Representation of SOQL query in offline query builder tool</inlineHelpText>
        <label>Offline Query</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Ownership_Limit__c</fullName>
        <description>Indicates the type of restriction to be applied on the data set: All records visible to the owner, all the owner&apos;s records or all the owner&apos;s team&apos;s records</description>
        <inlineHelpText>Indicates the type of restriction to be applied on the data set: All records visible to the owner, all the owner&apos;s records or all the owner&apos;s team&apos;s records</inlineHelpText>
        <label>Ownership Limit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>My Records</fullName>
                    <default>true</default>
                    <label>My Records</label>
                </value>
                <value>
                    <fullName>My Team&apos;s Records</fullName>
                </value>
                <value>
                    <fullName>All Records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Parent_Object__c</fullName>
        <description>For child objects, API name of the parent object</description>
        <inlineHelpText>For child objects, API name of the parent object</inlineHelpText>
        <label>Parent Object</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Profile_Key__c</fullName>
        <description>Unique key to identify the relationship between an Offline profile, object name and related object. Calculated automatically</description>
        <formula>IF(Len( SVMXC__Related_To__r.SVMXC__Object_Name__c )&lt;1 ,
   SVMXC__Offline_Profile__r.SVMXC__Profile_Name__c  &amp; &quot;_&quot; &amp;  SVMXC__Object_Name__c ,
   SVMXC__Offline_Profile__r.SVMXC__Profile_Name__c  &amp; &quot;_&quot; &amp;  SVMXC__Object_Name__c &amp; &quot;_&quot;  &amp; SVMXC__Related_To__r.SVMXC__Object_Name__c )</formula>
        <label>Profile Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this object is included in the dataset indirectly as a result of referencing another object, this field indicates the source object</description>
        <inlineHelpText>If this object is included in the dataset indirectly as a result of referencing another object, this field indicates the source object</inlineHelpText>
        <label>Related To</label>
        <referenceTo>SVMXC__Offline_Object__c</referenceTo>
        <relationshipLabel>Related Objects Enabled for Offline</relationshipLabel>
        <relationshipName>Offline_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Retain_Old_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Offline Client user can retain old, unused reference records of this object type</description>
        <inlineHelpText>Indicates if the Offline Client user can retain old, unused reference records of this object type</inlineHelpText>
        <label>Retain Old Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SOQL_Query__c</fullName>
        <description>Salesforce SOQL query used to retrieve data from this object</description>
        <inlineHelpText>Salesforce SOQL query used to retrieve data from this object</inlineHelpText>
        <label>SOQL Query</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in ServiceMax screens to manage record selection</description>
        <inlineHelpText>To select a record for edit or delete on manageDataSet Page</inlineHelpText>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Tab_Order__c</fullName>
        <description>Default tab order</description>
        <inlineHelpText>Default tab order</inlineHelpText>
        <label>Tab Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Use_Object_As_Home_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this object&apos;s tab should be used as the home tab</description>
        <inlineHelpText>Indicates if this object&apos;s tab should be used as the home tab</inlineHelpText>
        <label>Use Object As Home Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__User_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this object is automatically included due to ServiceMax functionality or explicitly added by the user</description>
        <inlineHelpText>Indicates if this object is automatically included due to ServiceMax functionality or explicitly added by the user</inlineHelpText>
        <label>User Defined?</label>
        <type>Checkbox</type>
    </fields>
    <label>Offline Object</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offline Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>